[tool.poetry]
name = "routology"
version = "0.1.0"
description = ""
authors = ["Sayafdine Said <musikid@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scapy = "^2.5.0"
networkx = "^3.0"
matplotlib = "^3.6.3"
python-whois = "^0.8.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
