[tool.poetry]
name = "routology"
version = "0.1.0"
description = ""
authors = ["Sayafdine Said <musikid@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
networkx = "^3.0"
typer = "^0.7.0"
aiostream = "^0.4.5"
scapy = "^2.5.0"
more-itertools = "^9.1.0"
pyvis = "^0.3.2"
matplotlib = "^3.7.1"
dnspython = "^2.6.1"
rich = "^13.3.4"
netgraph = "^4.12.8"

[tool.poetry.scripts]
routology = "routology.__main__:app"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
kathara = { version = "^3.5.5" } #, extras = ["pyuv"]
pre-commit = "^3.2.0"

[tool.pytest.ini_options]
addopts = "--verbose --capture=no --color=yes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
